--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="navbar">
         <div class="logo">
           <img
-            src="https://images.ctfassets.net/y2ske730sjqp/1aONibCke6niZhgPxuiilC/2c401b05a07288746ddf3bd3943fbc76/BrandAssets_Logos_01-Wordmark.jpg?w=940"
+            src="https://upload.wikimedia.org/wikipedia/commons/7/7a/Logonetflix.png"
             alt="Netflix logo"
           />
         </div>
